<resources>
    <string name="app_name">学生管理平台教师端</string>
    <string name="class_detail_left_btn_str">签到历史</string>
    <string name="class_detail_right_btn_str">发起签到</string>
    <string name="login_username_str">用户名</string>
    <string name="login_password_str">密码</string>
    <string name="login_btn_str">立即登录</string>
    <string name="main_create_class_str">创建班级</string>
    <string name="main_personal_str">个人中心</string>
    <string name="main_title">我创建的班级</string>
    <string name="new_class_name">班级名称：</string>
    <string name="new_class_time">持续时间：</string>
    <string name="new_class_max_m">最大距离：</string>
    <string name="new_class_location">当前位置：</string>
    <string name="new_class_location_waiting">定位中</string>
    <string name="new_class_do_btn_str">发起签到</string>
    <string name="logout_btn_str">注销登录</string>
    <string name="base_url_hint_str">Base Url</string>
    <string name="leave_reason_my_str">我发起的签到</string>
    <string name="new_class_name_hint_str">请输入班名</string>
    <string name="menu_del_class_str">立即解散班级</string>
    <string name="menu_del_student_str">请离该学生</string>
    <string name="new_class_accuracy_info">定位精度：</string>
    <string name="menu_export_check_str">导出签到信息</string>
    <string name="menu_import_student_str">导入学生信息</string>
    <string name="change_password_hint_str">新密码</string>
    <string name="change_password">修改密码</string>
    <string name="menu_modify_class_name_str">修改班级名称</string>
    <string name="modify_class_name_hint_str">新班级名称</string>
</resources>
