<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.ClassDetailActivity">
    <item
        android:id="@+id/item_export_check"
        android:title="@string/menu_export_check_str"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_import_student"
        android:title="@string/menu_import_student_str"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_modify_class_name"
        android:title="@string/menu_modify_class_name_str"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_del_class"
        android:title="@string/menu_del_class_str"
        app:showAsAction="never" />
</menu>