<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:toolbar="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.NewClassCheckActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        toolbar:title="发起签到" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/tv_class_name_info"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/new_class_name"
            android:textColor="#000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_class_name"
            style="@style/list_item_right"
            tools:text="1604" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/listDivider" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/tv_time_info"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/new_class_time"
            android:textColor="#000"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="-18dp"
            android:background="@null"
            android:entries="@array/class_check_time"
            android:spinnerMode="dialog" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/listDivider" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/tv_max_m_info"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/new_class_max_m"
            android:textColor="#000"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="-26dp"
            android:background="@null"
            android:entries="@array/class_check_m"
            android:spinnerMode="dialog" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/listDivider" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/tv_accuracy_info"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/new_class_accuracy_info"
            android:textColor="#000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_location_accuracy"
            style="@style/list_item_right"
            android:text="@string/new_class_location_waiting"
            android:textColor="#000" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/listDivider" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/tv_now_location"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/new_class_location"
            android:textColor="#000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_address"
            style="@style/list_item_right"
            android:text="@string/new_class_location_waiting"
            android:textColor="#000"
            android:textSize="16sp" />
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_new_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/colorAccent"
        android:paddingStart="32dp"
        android:paddingTop="16dp"
        android:paddingEnd="32dp"
        android:paddingBottom="16dp"
        android:text="@string/new_class_do_btn_str"
        android:textAppearance="?android:attr/textAppearanceLargeInverse"
        android:textSize="16sp"
        android:theme="@style/AppTheme" />
</androidx.appcompat.widget.LinearLayoutCompat>